# maintenance-completion-predictions

./: README.md  maintenance_task_model1.keras  maintenance_task_model2.keras  maintenance_task_model3.keras  maintenance_task_model4.keras  maintenance_task_model5.keras  maintenance_task_model6.keras  maintenance_task_model7.keras  pyproject.toml
maintenance_completion_predictions/data/: prediction_data.csv
maintenance_completion_predictions/src/: predict.py  prediction_server.py  prediction_service.proto  prediction_service_pb2.py  prediction_service_pb2.pyi  prediction_service_pb2_grpc.py  prediction_test.py  train.py  utils.py
