[tool.poetry]
name = "maintenance-completion-predictions"
version = "0.1.0"
description = ""
authors = ["chase-cove <chase@cove.is>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<3.12"
pandas = "^2.1.3"
scikit-learn = "^1.3.2"
tensorflow = "^2.15.0"
tensorflow-macos = "^2.15.0"
numpy = "^1.26.2"
grpcio = "^1.59.2"



[tool.poetry.group.dev.dependencies]
flake8 = "^6.1.0"
black = "^23.11.0"
grpcio-tools = "^1.59.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
